# linguist-cards

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  cli.py  config.py  handlers.py  pyproject.toml  run.sh  sqlite.py
.github/workflows/: deploy.yml  start.yml  stop.yml
lib/: api_client.py
lib/chatgpt/: api.py
lib/mochi/: api.py
scripts/: add_cards_to_db.py
