[project]
name = "lingvist-cards"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio==4.6.2.post1",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "dotenv>=0.9.9",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "python-telegram-bot==21.6",
    "pyttsx3==2.98",
    "requests==2.32.3",
    "ruff>=0.11.0",
    "sniffio==1.3.1",
    "urllib3==2.2.3",
]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py313"
